# Setsuna

./: .gitignore  CNAME  LICENSE  README.md  README_RU.md  index.html  package-lock.json  package.json  privacy.html  terms.html
docs/: CNAME  index.html  privacy.html  release-updates.md  terms.html
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: deinflect.json  lib.rs  main.rs
src/components/: AppLayout.tsx  AppModals.tsx  Icons.tsx  Lookuper.tsx  SettingsModal.tsx  SetupWizard.tsx  StatsPanel.tsx  TextContainer.tsx
src/components/Settings/: SettingsAnki.tsx  SettingsCloud.tsx  SettingsLookup.tsx
src/utils/: anki.ts  constants.ts  gdrive.ts  helpers.ts  textCleaner.ts
